# nanogui-learning

./: .gitmodules  CMakeLists.txt  nanoplayer.kdev4
include/: logdef.h
src/: CMakeLists.txt  main.cpp
src/dict/: dict.h  youdao.cpp
src/ml/: texture.h  videostate.cpp  videostate.hpp
